opam-version: "2.0"
synopsis: "Implementation of BDD"
maintainer: "Jean-Christophe.Filliatre@lri.fr"
authors: "Jean-Christophe Filliâtre"
license: "LGPL-2.1"
homepage: "https://www.lri.fr/~filliatr/software.en.html"
bug-reports: "https://github.com/backtracking/ocaml-bdd/issues"
depends: [
  "dune" {build}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "@install" "-p" name "-j" jobs]
  [with-doc "dune" "build" "@doc" "-p" name]
  [with-test "dune" "runtest" "-p" name]
]
dev-repo: "git://github.com/backtracking/ocaml-bdd.git"
