opam-version: "2.0"
synopsis: "Implementation of BDD"
maintainer: "Jean-Christophe.Filliatre@cnrs.fr"
authors: "Jean-Christophe Filliâtre"
license: "LGPL-2.1-only"
homepage: "https://github.com/backtracking/ocaml-bdd"
bug-reports: "https://github.com/backtracking/ocaml-bdd/issues"
depends: [
  "dune" {build}
  "stdlib-shims"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "@install" "-p" name "-j" jobs]
  [with-doc "dune" "build" "@doc" "-p" name]
  [with-test "dune" "runtest" "-p" name]
]
dev-repo: "git://github.com/backtracking/ocaml-bdd.git"
