(test
  (name check)
  (modules check)
  (libraries bdd prop))

(executable
  (name test)
  (modules test)
  (libraries bdd prop))

(executable
  (name queen)
  (modules queen)
  (libraries bdd))

(executable
  (name tiling)
  (modules tiling)
  (libraries bdd))

(executable
  (name path)
  (modules path)
  (libraries bdd))

(executable
  (name bdd_sat)
  (modules bdd_sat)
  (libraries prop unix))

(test
  (name quant_elim)
  (modules quant_elim)
  (libraries bdd))

(executable
  (name bench_prop_cli)
  (modules bench_prop_cli)
  (libraries prop))

(executable
  (name dimacs)
  (modules dimacs)
  (libraries bdd))
